volunteer activity links

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 						<section class="box style1">
 							<span class="icon featured fa-comments"></span>
 							<h3>HISPA Role Model Program</h3>
-							<p class="small-paragraph">I volunteer to give presentations that empower students through my stories, fostering a sense of possibility and encouraging their academic and career success. <a href="YOUR_LINKEDIN_LINK_HERE">LinkedIn</a></p>
+							<p class="small-paragraph">I volunteer to give presentations that empower students through my stories, fostering a sense of possibility and encouraging their academic and career success. <a href="https://www.linkedin.com/posts/lauramarquezq_hispaimagineday-inspire-careerdiversity-activity-7270438429493018625-MU92?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAIAGaYB1UvkiYDnTmtjvpk2DtFfLxt7X9k">LinkedIn</a></p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
 							<span class="icon solid featured fa-camera-retro"></span>
 							<h3>Business Resource Groups</h3>
-							<p class="small-paragraph">I volunteer through the Talent Ambassador program and Business Resource Groups to create a supportive environment that promotes resilience and celebrates achievements, such as the <a href="YOUR_LINKEDIN_EVENT_LINK_HERE">LinkedIn Event</a></p>
+							<p class="small-paragraph">I volunteer through the Talent Ambassador program and Business Resource Groups to create a supportive environment that promotes resilience and celebrates achievements, such as the <a href="https://www.linkedin.com/posts/samanthaomara_for-me-one-of-my-favorite-ways-to-celebrate-activity-7045117024884125696-d-dE?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAIAGaYB1UvkiYDnTmtjvpk2DtFfLxt7X9k">LinkedIn Event</a></p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
