--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<section class="box style1">
 							<span class="icon solid featured fa-camera-retro"></span>
 							<h3>Business Resource Groups</h3>
-							<p class="small-paragraph">I volunteer through the Talent Ambassador program and Business Resource Groups to create a supportive environment that promotes resilience and celebrates achievements, such as the <a href="https://www.linkedin.com/posts/samanthaomara_for-me-one-of-my-favorite-ways-to-celebrate-activity-7045117024884125696-d-dE?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAIAGaYB1UvkiYDnTmtjvpk2DtFfLxt7X9k">LinkedIn Event</a></p>
+							<p class="small-paragraph">I volunteer through the Talent Ambassador program and Business Resource Groups to create a supportive environment that promotes resilience and celebrates achievements, such as the <a href="https://www.linkedin.com/posts/samanthaomara_for-me-one-of-my-favorite-ways-to-celebrate-activity-7045117024884125696-d-dE?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAIAGaYB1UvkiYDnTmtjvpk2DtFfLxt7X9k" target="_blank">LinkedIn Event</a></p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
